Finalisation du css sur index

--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
         <img src="img/bts1.PNG" alt="">
         <img src="img/ava.PNG" alt="">
     </div>
+
+    <div class="pieds">
+
+        
+        <h1>copyrigth 2022</h1>
+    </div>
     
 </body>
 </html>
