insersion d'objet et design de la page connection

--- a/connection.html
+++ b/connection.html
@@ -22,7 +22,7 @@
     
             <a href="#">Mot de pass oublié!</a>
     
-            <button><a href="inscription.html">Si vous n'avez pas de compte veillez vous inscrire ici!</a></button>
+            <button><a href="inscription.html">veillez vous inscrire ici!</a></button>
         </div>
 
     </div>
