quelque modification sur connection et ajout des contenues html sur la page inscrption

--- a/connection.html
+++ b/connection.html
@@ -8,10 +8,13 @@
     <title>Connection</title>
 </head>
 <body>
+
+    <header>
+            
+    </header>
+
+
     <div class="page1">
-        <div class="logo">
-            <img src="img/musiquefond.jpg" alt="">
-        </div>
 
         <div class="contenue">
             <form action="#">
@@ -25,6 +28,12 @@
             <button><a href="inscription.html">veillez vous inscrire ici!</a></button>
         </div>
 
+    </div>
+
+    <div class="pieds">
+
+
+        <h1>copyrigth 2022</h1>
     </div>
 </body>
 </html>
