--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="pag">
         
         <div class="bouttons">
-            <a href="">Accueil</a>
-            <a href="">Connectez vous</a>
-            <a href="">Inscrivez vous</a>
+            <a href="#">Accueil</a>
+            <a href="connection.html">Connectez vous</a>
+            <a href="inscription.html">Inscrivez vous</a>
         </div>
 
        
