--- a/connection.html
+++ b/connection.html
@@ -32,7 +32,11 @@
 
     <div class="pieds">
 
-
+        <div class="contact">
+            <i class="fab fa-whatsapp"><a href=""></a></i>
+            <i class="fab fa-facebook"><a href=""></a></i>
+            <i class="fab fa-twitter"><a href=""></a></i>
+        </div>
         <h1>copyrigth 2022</h1>
     </div>
 </body>
