--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/beauty.css">
+    <link rel="stylesheet" href="D:\laragon\fontawesome-free-6.0.0-web/css/brands.min.css">
     <title>site d'apparts</title>
 </head>
 <body>
@@ -86,7 +87,11 @@
     </div>
 
     <div class="pieds">
-
+        <div class="contact">
+            <i class="fab fa-whatsapp"><a href=""></a></i>
+            <i class="fab fa-facebook"><a href=""></a></i>
+            <i class="fab fa-twitter"><a href=""></a></i>
+        </div>
 
         <h1>copyrigth 2022</h1>
     </div>
