suppression des pages supplémmentaires

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
     <div class="pieds">
         <div class="contact">
-            <i class="fab fa-whatsapp"><a href=""></a></i>
-            <i class="fab fa-facebook"><a href=""></a></i>
-            <i class="fab fa-twitter"><a href=""></a></i>
+            <a href=""><i class="fab fa-whatsapp"></i></a>
+            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
         </div>
 
         <h1>copyrigth 2022</h1>
