--- a/connection.html
+++ b/connection.html
@@ -31,12 +31,12 @@
     </div>
 
     <div class="pieds">
-
         <div class="contact">
-            <i class="fab fa-whatsapp"><a href=""></a></i>
-            <i class="fab fa-facebook"><a href=""></a></i>
-            <i class="fab fa-twitter"><a href=""></a></i>
+            <a href=""><i class="fab fa-whatsapp"></i></a>
+            <a href=""><i class="fab fa-facebook"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
         </div>
+
         <h1>copyrigth 2022</h1>
     </div>
 </body>
