finalisation du css

--- a/connect.html
+++ b/connect.html
@@ -10,7 +10,7 @@
 <body>
     <div class="center">
         <h1>Connection</h1>
-        <form action="#">
+        <form action="contenue.html">
             <div class="txt_field">
                 <input type="text" required>
                 <span></span>
