--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         
         <div class="bouttons">
             <a href="#">Accueil</a>
-            <a href="connection.html">Connectez vous</a>
-            <a href="inscription.html">Inscrivez vous</a>
+            <a href="connect.html">Connectez vous</a>
+            <a href="inscrip.html">Inscrivez vous</a>
         </div>
 
        
