--- a/inscrip.html
+++ b/inscrip.html
@@ -10,7 +10,7 @@
 <body>
     <div class="center">
         <h1>Inscription</h1>
-        <form action="#">
+        <form action="connect.html">
             <div class="txt_field">
                 <input type="text" required>
                 <span></span>
