--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/beauty.css">
     <link rel="stylesheet" href="D:\laragon\fontawesome-free-6.0.0-web/css/brands.min.css">
-    <title>site d'apparts</title>
+    <title>Media play</title>
 </head>
 <body>
 
